--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "autocomplete",
     "auto complete",
     "autosuggest",
-    "auto suggest",
-    "typeahead"
+    "auto suggest"
   ],
   "files": [
     "src",
